--- a/BPC.CFG
+++ b/BPC.CFG
@@ -1,7 +1,7 @@
 /EZ:\PROGRA~1\USURPER\EXE\BP
-/I..\COMMON;C:\BP\UNITS;
-/O..\COMMON;C:\BP\UNITS;
-/U..\COMMON;C:\BP\UNITS;
+/I..\COMMON;Z:\BP\UNITS;
+/O..\COMMON;Z:\BP\UNITS;
+/U..\COMMON;Z:\BP\UNITS;
 /R
 /$A+
 /$B-
