wishing well bugs

--- a/VPC.CFG
+++ b/VPC.CFG
@@ -1,8 +1,8 @@
-/OZ:\PROGRAMMING\USURPER\EXE\VP
-/I..\COMMON;..\ELECOM;Z:\VP21\SOURCE\RTL;Z:\VP21\SOURCE\TV
-/U..\COMMON;..\ELECOM;Z:\VP21\UNITS.W32;Z:\VP21\SOURCE\RTL;Z:\VP21\SOURCE\W32;Z:\VP21\SOURCE\TV;Z:\VP21\EXAMPLES\W32\OPENGL\SHARED
-/L..\COMMON;..\ELECOM;Z:\VP21\LIB.W32;Z:\VP21\UNITS.W32
-/R..\COMMON;..\ELECOM;Z:\VP21\RES.W32
+/Oc:\windows\temp\USURPER\EXE\VP
+/I..\COMMON;..\ELECOM;c:\VP21\SOURCE\RTL;c:\VP21\SOURCE\TV
+/U..\COMMON;..\ELECOM;c:\VP21\UNITS.W32;c:\VP21\SOURCE\RTL;c:\VP21\SOURCE\W32;c:\VP21\SOURCE\TV;c:\VP21\EXAMPLES\W32\OPENGL\SHARED
+/L..\COMMON;..\ELECOM;c:\VP21\LIB.W32;c:\VP21\UNITS.W32
+/R..\COMMON;..\ELECOM;c:\VP21\RES.W32
 /$A+
 /$B-
 /$D+
