EDITOR compiles/runs with Win32 FPC

--- a/SOURCE/EDITOR/EDITOR.lpi
+++ b/SOURCE/EDITOR/EDITOR.lpi
@@ -50,7 +50,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\..\bin\$(TargetCPU)-$(TargetOS)\EDITOR32.EXE"/>
+      <Filename Value="..\..\bin\$(TargetCPU)-$(TargetOS)\EDITORWF"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="..\common;..\elecom;$(ProjOutDir)"/>
