--- a/SOURCE/USURPER/USURPER.lpi
+++ b/SOURCE/USURPER/USURPER.lpi
@@ -50,7 +50,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\..\bin\$(TargetCPU)-$(TargetOS)\USURPERWF.EXE"/>
+      <Filename Value="..\..\bin\$(TargetCPU)-$(TargetOS)\USURPERWF"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="..\common;..\elecom;$(ProjOutDir)"/>
