--- a/SOURCE/USURPER/USURPER.lpi
+++ b/SOURCE/USURPER/USURPER.lpi
@@ -49,7 +49,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\..\bin\$(TargetCPU)-$(TargetOS)\USURPERWF"/>
+      <Filename Value="..\..\bin\$(TargetCPU)-$(TargetOS)\USURPER32"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="..\common;..\elecom;$(ProjOutDir)"/>
