--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 bin/i386-linux/*
-!bin/i386-linux/EDITOR
-!bin/i386-linux/USURPER
+!bin/i386-linux/EDITORX
+!bin/i386-linux/USURPERX
 bin/i386-win32/*
 !bin/i386-win32/EDITOR32.exe
 !bin/i386-win32/USURPER32.exe
@@ -9,6 +9,11 @@ bin/i386-msdos/*
 !bin/i386-msdos/EDITOR.ovr
 !bin/i386-msdos/USURPER.exe
 !bin/i386-msdos/USURPER.ovr
+bin/x86_64-linux/*
+!bin/x86_64-linux/EDITORX
+!bin/x86_64-linux/USURPERX
 lib/
 old-build/
 ORIGINAL ARCHIVES/
+SOURCE/COMMON/DDPlus
+SOURCE/USURPER/DDPlus
