--- a/SOURCE/EDITOR.lpi
+++ b/SOURCE/EDITOR.lpi
@@ -64,6 +64,8 @@
     </Parsing>
     <CodeGeneration>
       <SmartLinkUnit Value="True"/>
+      <TargetCPU Value="i386"/>
+      <TargetOS Value="win32"/>
       <Optimizations>
         <OptimizationLevel Value="3"/>
       </Optimizations>
