Fix #14 and version bump
An RMDoor update fixes an issue where hitting ENTER would not pick the default option.  Also bumped version number.

--- a/SOURCE/EDITOR.lpi
+++ b/SOURCE/EDITOR.lpi
@@ -45,7 +45,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\bin\$(TargetCPU)-$(TargetOS)\EDITOR"/>
+      <Filename Value="..\bin\$(TargetCPU)-$(TargetOS)\EDITOR.EXE"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="EDITOR;COMMON;$(ProjOutDir)"/>
