--- a/SOURCE/USURPER.lpi
+++ b/SOURCE/USURPER.lpi
@@ -45,7 +45,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="..\bin\$(TargetCPU)-$(TargetOS)\USURPER"/>
+      <Filename Value="..\bin\$(TargetCPU)-$(TargetOS)\USURPER.EXE"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="COMMON;USURPER;..\..\RMDoor;$(ProjOutDir)"/>
