--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 obj/
+bin/i386-go32v2/USURPER.CFG
+bin/i386-go32v2/DATA
+bin/i386-go32v2/DOCS
+bin/i386-go32v2/NODE
+bin/i386-go32v2/SCORES
+bin/i386-go32v2/TEXT
 bin/x86_64-win64/USURPER.CFG
 bin/x86_64-win64/DATA
 bin/x86_64-win64/DOCS
