Add zip archives for each platform

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ bin/x86_64-win64/DOCS
 bin/x86_64-win64/NODE
 bin/x86_64-win64/SCORES
 bin/x86_64-win64/TEXT
+RELEASE/EDITOR.EXE
+RELEASE/USURPER.EXE
