--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build
+name: Pre-Release
 
 # Controls when the workflow will run
 on:
@@ -31,7 +31,10 @@ jobs:
         run: |
           .\build.ps1
           
-      - uses: actions/upload-artifact@v2
+      - uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
-          name: zip-archives
-          path: .\*.zip
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: usurper*.zip
