--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Usurper
         shell: pwsh
         run: |
-          .\build.ps1 > build.log
+          .\build.ps1 -Debug > build.log
           
       - name: Upload log file
         if: failure()
